# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py  even_logic.py
brain_games/games/: calc.py  engine.py  even.py  gcd.py  prime.py  progression.py  welcome.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
