[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "The project is called Brain Games. It consists of 5 mini-games, to pass the game it is enough to give 3 correct answers, in case of wrong answer the game ends."
authors = ["i-pichurov <deadbassein@gmail.com>"]
repository = "https://github.com/i-pichurov/python-project-49"
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
